--- a/07.spring/lec09_summary/src/main/resources/static/index.html
+++ b/07.spring/lec09_summary/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
 	<div class="container" align="center">
 		<div class="mt-4 p-5 bg-primary text-white rounded">
 			<h3>Spring Boot</h3>
-			<p>상세설명.................</p>
+			<p>답변형게시판애플리케이션(작성중!!).................</p>
 		</div>
 		<br>
 		
